Corrected tab horizontal alignment issue with align-items center, corrected a tag for smogon link in featured pokemon

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ h1 {
   display: flex;
   margin: 25px auto;
   justify-content: space-around;
+  align-items: center;
   background-color: rgb(238, 235, 235);
   border: 2px solid black;
   width: 90%;
